# ogd4all

./: .gitignore  README.md  main.py  pyproject.toml  utils.py
generation/: iterative_local_analyzer.py  simple_local_analyzer_v2.py
retrieval/: agentic_retriever.py  verified_retriever.py
