[project]
name = "ogd4all"
version = "1.0.0"
requires-python = "==3.12.*"
dependencies = [
    "azure-ai-inference==1.0.0b9",
    "contextily==1.7.0",
    "deep-translator==1.11.4",
    "e2b-code-interpreter==2.4.1",
    "folium==0.20.0",
    "geopandas==1.1.3",
    "geopy==2.4.1",
    "gradio==6.9.0",
    "gradio-folium==0.0.6",
    "ipykernel==7.2.0",
    "langchain-azure-ai==1.1.0",
    "langchain-community==0.4.1",
    "langchain-google-genai==4.2.1",
    "langchain-ollama==1.0.1",
    "langchain-openai==1.1.11",
    "langgraph==1.1.1",
    "mapclassify==2.10.0",
    "matplotlib==3.10.8",
    "numpy==2.4.3",
    "openai==2.26.0",
    "pandas[plot,output-formatting]==3.0.1",
    "pydantic==2.12.5",
    "pymilvus==2.6.9",
    "pymupdf4llm==1.27.2.1",
    "pyproj==3.7.2",
    "rapidfuzz==3.14.3",
    "seaborn==0.13.2",
    "shapely==2.1.2",
    "smolagents==1.19.0",
    "structlog==25.5.0",
    "tiktoken==0.12.0",
]
